<resources>
    <string name="facebook_app_id">1838205499869021</string>
    <string name="fb_login_protocol_scheme">fb1838205499869021</string>
    <string name="facebook_client_token">727f33f9c04347a14457d6f94216dff1</string>
    <string name="app_name">Fork</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="button_lang">English</string>
    <string name="button_lang_ar">إنجليزي</string>
    <string name="button_login">Log in</string>
    <string name="button_reg">Register</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="secure_login">Secure Login</string>
    <string name="mobile_no">Enter Mobile No</string>
    <string name="password">Enter Password</string>
    <string name="skip"> <u>Skip</u> </string>
    <string name="enter_as_guest"><u>Enter as Guest</u></string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="please_enter_the_details_below_to_continue">Please enter the details below to continue</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_otp_underline"><u>Enter Otp</u></string>
    <string name="msg_title">Do you want to allow "Fork" \n to enable face ID?</string>
    <string name="did_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="keep_signed_in">Keep Signed In</string>
    <string name="enable">Enable</string>
    <string name="do_you_want_to_allow_fork_n_to_enable_face_id">Do you want to allow\n&quot;Fork&quot;\nto enable face ID?</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="ok">Ok</string>
    <string name="otp">OTP.</string>
    <string name="lorem_ipsum_door_sit_amet_adispacing">Lorem Ipsum door sit amet, adispacing</string>
    <string name="or_quick_login_via">Or Quick Login Via</string>
    <string name="back">Back</string>
    <string name="conform_password">Conform Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_name">User Name</string>
    <string name="face_id">Face ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="renter_new_password">Re enter New Password</string>
    <string name="some_text_some_text_some_text_some_text">Some text some text some text some text</string>
    <string name="for_secure_and_faster_access_would_you_like_to_enable_face_id">For secure and faster access, would you like to enable face id?</string>
    <string name="please_use_face_id_to_login">Please use face ID to login</string>
    <string name="menu">Menu</string>
    <string name="scan_to_order">Scan To Order</string>
    <string name="walk_in">Walk In</string>
    <string name="log_in_register">Log In / Register</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="location">Locations</string>
    <string name="support">Support</string>
    <string name="share">Share Falk</string>
    <string name="contact_amp_terms"><![CDATA[Contact & Terms]]></string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="language">Language:</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="need_to_contact_us">Need To Contact Us ?</string>
    <string name="need_support">Need Support ?</string>
    <string name="reserve_table">Reserve Table ?</string>
    <string name="book_table">Book Table</string>
    <string name="walkin">Walk In</string>
    <string name="pickup">Pick Up</string>
    <string name="contact">Contact</string>
    <string name="term">Terms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_14">14</string>
    <string name="current_queue">Current Queue</string>
    <string name="get_in_the_queue">Get in the Queue</string>
    <string name="other_options">Other Options</string>
    <string name="booking_table">Booking Table</string>
    <string name="floor_ground">Floor Ground</string>
    <string name="floor">Floor</string>
    <string name="list">List</string>
    <string name="pay_to_conform">Pay To Conform</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="no_of_person">No of Person:</string>
    <string name="type">Type:</string>
    <string name="conform_pay"><![CDATA[Conform & Pay]]></string>
    <string name="cancel">Cancel</string>
    <string name="note_the_time_table_is_reserved_upto_6_00_pm_only">Note: The Time Table Is Reserved Up to \n 6.00 Pm Only</string>
    <string name="your_reserved_seats">Your Reserved Seats</string>
    <string name="select_food">Select Food</string>
    <string name="view_cart">View Cart</string>
    <string name="types">Types</string>
    <string name="add">Add</string>
    <string name="qty">QTY</string>
    <string name="reserve">Reserve</string>
    <string name="pay_for_table_food"><![CDATA[Pay For Table & Food]]></string>
    <string name="summary">Summary</string>
    <string name="progress">Progress</string>
    <string name="complete">Complete</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="note_the_table_is_reserved_up_to_6pm_only">Note The Table is Reserved Up to 6pm only</string>
    <string name="will_alert_as_table_ready">Will Alert As \n Table Ready</string>
    <string name="share_to_members">Share To Members</string>
    <string name="get_directions">Get Directions</string>
    <string name="reserve_the_food">Reserve The Food</string>
    <string name="conformation_of_food_order">Conformation of \n Food Order</string>
    <string name="we_will_inform_you_as_the_table_is_ready">We will inform you as the table is ready</string>
    <string name="note_the_table_is_reserved_upto_6_00_pm_only">Note: The Table is Reserved Up to \n 6:00 Pm Only</string>
    <string name="note_seating">After Seating 5 Minutes Food Will \n Prepare </string>
    <string name="rating_for_food_and_table">Rating For Food And Table</string>
    <string name="conformation_table_food_is_reserved"><![CDATA[Conformation \n Table & Food Is \n Reserved]]></string>
    <string name="after_seating_5_minutes_food_will_n_prepare">After Seating 5 Minutes Food Will \n Prepare</string>
    <string name="share_to_add_order">Share To Add Order</string>
    <string name="view_invoice">View Invoice</string>
    <string name="modify_order">Modify Order</string>
    <string name="ask_support">Ask Support</string>
    <string name="work">Work</string>
    <string name="hotel">Hotel :</string>
    <string name="hotel_n">Hotel</string>
    <string name="save_location">Save Location</string>
    <string name="dafault_val">Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat">Chat</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="walllet">Walllet :</string>
    <string name="add_funds">Add Funds</string>
    <string name="moath">MOATH</string>
    <string name="sar">SAR</string>
    <string name="table_2">Table:2</string>
    <string name="to_reserve_2_sar">To Reserve: 2 Sar</string>
    <string name="rules">Rules</string>
    <string name="dress_code">Dress Code:</string>
    <string name="occasion_birthday">Occasion, Birthday:</string>
    <string name="some_text">Search Food</string>
    <string name="make_it_surprise_or_any_wish">Make it Surprise Or Any Wish</string>
    <string name="select_amp_next"><![CDATA[Select & Next]]></string>
    <string name="table">Table</string>
    <string name="indoor">Indoor:</string>
    <string name="food">Food:</string>
    <string name="waiter">Waiter:</string>
    <string name="experience">Experience:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="items_in_the_cart">Items in the cart</string>
    <string name="table_booking">Table Booking</string>
    <string name="name">Name :</string>
    <string name="time">Time :</string>
    <string name="phone">Phone :</string>
    <string name="office">Office</string>
    <string name="make_default">Make Default</string>
    <string name="person_7">Person 7</string>
    <string name="occasion">Occasion</string>
    <string name="inside">Inside</string>
    <string name="enter_location">Enter Location</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="full_guide_for_app_video">Full Guide For App Video</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="message">Enter Message</string>
    <string name="_3_april_4_00_pm">3 April, 4:00 PM</string>
    <string name="startbucks">Startbucks</string>
    <string name="april_14_5_00_pm_for_7_person">April 14 , 5:00 Pm For 7 Person</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure want to logOut?</string>
    <string name="conformsg">Your Table booked do you want to payment ?</string>
    <string name="logout">Logout</string>
    <string name="pasta">Pasta</string>
    <string name="sar_14">Sar 14</string>
    <string name="open_till_1_00_pm">Open Till: 1.00 Pm</string>
    <string name="walk_in_4_tb_pickup_8_min">Walk in 4 Tb, Pickup 8 Min</string>
    <string name="_2_km">2 Km</string>
    <string name="starbucks">Starbucks</string>
    <string name="marg">Marg</string>
    <string name="toppings">Toppings</string>
    <string name="location_1">Location :&#160;</string>
    <string name="up_location">Update Location</string>
    <string name="order_id_6256">Order Id:6256</string>
    <string name="pass">Pass</string>
    <string name="exit">Exit</string>
    <string name="view_menu">View Menu</string>
    <string name="walk_in_queue">Walk In Queue</string>
    <string name="food_order_is_placed">Food Order Is Placed</string>
    <string name="order_id_8523">Order Id:8523</string>
    <string name="paid_total">Paid Total</string>
    <string name="order_is_placed">Order Is Placed</string>
    <string name="_5_50_pm_30_minutes_timer">5.50 Pm - 30 Minutes Timer</string>
    <string name="we_will_alert_as_food_is_ready">We Will Alert As Food is Ready</string>
</resources>