<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/first">

        <item
            android:id="@+id/menu_scanorder"
            android:icon="@drawable/ic_maximize_2"
            android:title="@string/scan_to_order" />
        <item
            android:id="@+id/menu_walkin"
            android:icon="@drawable/ic_user"
            android:title="@string/walk_in" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_locked"
            android:title="@string/log_in_register" />

    </group>



    <group android:id="@+id/group_second">


        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_group"
            android:title="@string/home" />

        <item
            android:id="@+id/menu_order"
            android:icon="@drawable/ic_food"
            android:title="@string/orders" />

        <item
            android:id="@+id/menu_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet" />

        <item
            android:id="@+id/menu_location"
            android:icon="@drawable/ic_pin"
            android:title="@string/location" />

        <item
            android:id="@+id/menu_support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />


    </group>

    <group android:id="@+id/group_third">

        <item
            android:id="@+id/nav_switch"
            android:title="@string/language"
            app:actionLayout="@layout/switch_menu" />

        <item
            android:id="@+id/nav_switch_2"
            android:title="Enable Face Id:"
            app:actionLayout="@layout/radiobtn_menu" />
    </group>

    <group android:id="@+id/group_fourth">

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/ic_phone"
            android:title="@string/contact_amp_terms" />
    </group>

</menu>