<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group
        android:id="@+id/group_second"
        android:checkableBehavior="single">

         <item
            android:id="@+id/menu_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/wallet" />

        <item
            android:id="@+id/menu_location"
            android:icon="@drawable/pin"
            android:title="@string/location" />

        <item
            android:id="@+id/menu_support"
            android:icon="@drawable/support"
            android:title="@string/support" />
    </group>

    <group
        android:id="@+id/group_third"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/phone"
            android:title="@string/contact_amp_terms" />
    </group>

</menu>