<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    app:cardMaxElevation="7dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">



    <RelativeLayout
        android:id="@+id/relative_view"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_2sdp">

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ellipse">

            <TextView
                android:id="@+id/txt_table_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/generalsanssemibold"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </FrameLayout>


        <TextView
            android:id="@+id/table_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/generalsansmedium"
            android:text="@string/table"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table_txt"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_person"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_noperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalsanssemibold"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="11sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/generalsanssemibold"
                android:text="@string/indoor"
                android:textColor="@color/black"
                android:textSize="11sp" />


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>






