<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_220sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_alignParentBottom="true"
    app:cardElevation="7dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardMaxElevation="7dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_4sdp"
        android:padding="@dimen/_3sdp">

        <TextView
            android:id="@+id/txt_otpenter"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/do_you_want_to_allow_fork_n_to_enable_face_id"
            android:fontFamily="@font/generalsanssemibold"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/text_colorblack"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:background="@drawable/layout_rectangle"
            android:text="@string/don_t_allow"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/generalsansmedium"
            android:textSize="14sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_3sdp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:background="@drawable/layout_rectangle_2"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/generalsansmedium"
            android:textSize="14sp"
            app:backgroundTint="@null" />


    </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>